<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="title_edittext_preference">Edit text preference</string>
    <string name="summary_edittext_preference">An example that uses an edit text dialog</string>
    <string name="dialog_title_edittext_preference">Enter your favorite animal</string>
    <string name="title_checkbox_preference">Checkbox preference</string>
    <string name="summary_checkbox_preference">This is a checkbox</string>
    <string name="app_name">Project 2 Colorize</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="inline_preferences">In-line preferences</string>
    <string name="dialog_based_preferences">Dialog-based preferences</string>
    <string name="launch_preferences">Launch preferences</string>
    <string name="preference_attributes">Preference attributes</string>
    <string name="title_list_preference">List preference</string>
    <string name="summary_list_preference">An example that uses a list dialog</string>
    <string name="dialog_title_list_preference">Choose one</string>
    <string name="title_screen_preference">Screen preference</string>
    <string name="summary_screen_preference">Shows another screen of preferences</string>
    <string name="title_fragment_preference">Fragment preference</string>
    <string name="summary_fragment_preference">Shows another fragment of preferences</string>
    <string name="title_next_screen_toggle_preference">Toggle preference</string>
    <string name="summary_next_screen_toggle_preference">Preference that is on the next screen but same hierarchy</string>
    <string name="title_intent_preference">Intent preference</string>
    <string name="summary_intent_preference">Launches an Activity from an Intent</string>
    <string name="title_my_preference">My preference</string>
    <string name="summary_my_preference">This is a custom counter preference</string>
    <string name="title_advanced_toggle_preference">Haunted preference</string>
    <string name="summary_on_advanced_toggle_preference">I\'m on! :)</string>
    <string name="summary_off_advanced_toggle_preference">I\'m off! :(</string>
    <string name="title_parent_preference">Parent checkbox preference</string>
    <string name="summary_parent_preference">This is visually a parent</string>
    <string name="title_child_preference">Child checkbox preference</string>
    <string name="summary_child_preference">This is visually a child</string>
    <string name="sharemessage">Something to cherish, enjoy!</string>
    <string name="shareTitle">An image for you</string>
    <string name="revert">Revert</string>
    <string name="b_w">Black and White</string>
    <string name="color">Colorize</string>
    <string name="share">Share</string>
    <string name="CustomizeImage">Customize Image</string>
    <string name="Customize_Descrip">Customize the levels of sketchiness and color saturation</string>
    <string name="Sketchiness">Sketchiness</string>
    <string name="Sketchiness_Descrip">Set the BW threshold. A higher value will result in less detail and a whiter image</string>
    <string name="saturation">Saturation</string>
    <string name="Saturation_Descrip">Set color saturation. Higher values correlate with more colorful images</string>
    <string name="Settings">Settings</string>
    <string name="DEFAULT_BODY">Please enter a deault body in settings</string>
    <string name="DEFAULT_SUBJECT">Please enter a default subject in settings</string>
    <string name="Subject_Descrip">The subject of the message you\'d like to share</string>
    <string name="Body_Descrip">The body of the message you\'ll share</string>
    <string name="Share_Via">Share via</string>
    <string name="Permissions_Denied">One of the permissions was denied. Please allow both to properly use this app</string>

</resources>