<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity"
    >

    <item
        android:id="@+id/action_undo"
        android:title="@string/revert"
        android:icon="@drawable/ic_undo_black_18dp"
        android:orderInCategory="000"
        app:showAsAction="always"
        />

    <item
        android:id="@+id/action_B_W"
        android:title="@string/b_w"
        android:icon="@drawable/ic_border_color_black_18dp"
        android:orderInCategory="100"
        app:showAsAction="always"
        />


    <item
        android:id="@+id/action_colorize"
        android:title="@string/color"
        android:orderInCategory="200"
        android:icon="@drawable/ic_palette_black_18dp"
        app:showAsAction="always"
        />

    <item
        android:id="@+id/action_share"
        android:orderInCategory="300"
        android:title="@string/share"
        android:icon="@drawable/ic_share_black_18dp"
        app:showAsAction="always"/>

    <item
        android:id="@+id/action_settings"
        android:orderInCategory="400"
        android:title="@string/action_settings"
        app:showAsAction="never" />

</menu>
